test/expected/set_expl.out
cdecl> set expl
           ^
5: error: "expl": ambiguous set option; could be explain-by-default, explicit-ecsu, or explicit-int
